[package]
name = "bae_resampler"
repository = "https://github.com/ChylerDev/BAE_Resampler"
license = "MIT"
version = "0.14.0" # don't forget to fix version numbers in README.md documentation links
authors = ["Chyler Morrison <contact@chyler.info>"]
edition = "2018"
keywords = [ "audio", "audio-processing" ]
categories = [ "multimedia::audio" ]

[badges]
is-it-maintained-issue-resolution = { repository = "ChylerDev/BAE" }
is-it-maintained-open-issues = { repository = "ChylerDev/BAE" }
maintenance = { status = "actively-developed" }

[dependencies]
bae_types = { git = "https://github.com/ChylerDev/BAE_Types", branch = "master", version = "0.14.2" }
bae_sf = { git = "https://github.com/ChylerDev/BAE_SF", branch = "master", version = "0.14.2" }
wav = "0.4"

[dev-dependencies]
version-sync = "0.9"
bae_debug = { git = "https://github.com/ChylerDev/BAE_Debug", branch = "master" }
